fix: successful POST request always return a 201 response. Improve some descriptions
